# saasus-sdk-python

./: .env.sample  .flake8  .gitignore  .travis.yml  README.md  apistart.py  authapi.yml  generate.sh  pyproject.toml  requirements.txt  tmp.md  tox.ini
.openapi-generator/: FILES
SDK/: auth_client.py
docs/: AccountVerification.md  ApiKeys.md  Attribute.md  AuthInfo.md  AuthInfoApi.md  AuthorizationTempCode.md  BasicInfo.md  BasicInfoApi.md  BillingAddress.md  BillingInfo.md  ClientSecret.md  ConfirmSignUpWithAwsMarketplaceParam.md  CreateSaasUserParam.md  CreateSecretCodeParam.md  CreateTenantUserParam.md  CreateTenantUserRolesParam.md  CredentialApi.md  Credentials.md  CustomizePageProps.md  CustomizePageSettings.md  CustomizePageSettingsProps.md  CustomizePages.md  DeviceConfiguration.md  DnsRecord.md  Env.md  EnvApi.md  Envs.md  Error.md  ErrorApi.md  IdentityProviderConfiguration.md  IdentityProviderProps.md  IdentityProviders.md  LinkAwsMarketplaceParam.md  MessageTemplate.md  MfaConfiguration.md  MfaPreference.md  NotificationMessages.md  PasswordPolicy.md  PlanHistories.md  PlanHistory.md  (+43 more)
saasus_sdk_python/: __init__.py  __main__.py  api_client.py  configuration.py  rest.py
test/: test_account_verification.py  test_api_keys.py  test_attribute.py  test_attribute_type.py  test_auth_info.py  test_auth_info_api.py  test_authorization_temp_code.py  test_basic_info.py  test_basic_info_api.py  test_billing_address.py  test_billing_info.py  test_client_secret.py  test_confirm_sign_up_with_aws_marketplace_param.py  test_create_saas_user_param.py  test_create_secret_code_param.py  test_create_tenant_user_param.py  test_create_tenant_user_roles_param.py  test_credential_api.py  test_credentials.py  test_customize_page_props.py  test_customize_page_settings.py  test_customize_page_settings_props.py  test_customize_pages.py  test_device_configuration.py  test_dns_record.py  test_env.py  test_env_api.py  test_envs.py  test_error.py  test_error_api.py  test_identity_provider_configuration.py  test_identity_provider_props.py  test_identity_providers.py  test_invoice_language.py  test_link_aws_marketplace_param.py  (+51 more)
(+1088 files in other folders)
