[tool.poetry]
name = "saasus_sdk_python"
version = "1.0.0"
description = "SaaSus Auth API Schema"
authors = ["Anti-Pattern <team@openapitools.org>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/Anti-Pattern-Inc/saasus-sdk-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "SaaSus Auth API Schema"]
include = ["saasus_sdk_python/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
openapi-client = "^1.1.7"
aenum = "^3.1.15"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
starlette = "0.27.0"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"
flake8 = "^6.1.0"
pydantic = "^2.6.3"
pydantic-core = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
